--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       </div>
       <span class="fa fa-bars menu-icon"></span>
       <div class="header-right">
-        <a href="#">レッスン</a>
+        <a href="#aboutme"><img class="about-logo" src="https://github.com/calm0123/calm.portfolio/blob/master/about%20me.png?raw=true"></a>
         <a href="#">新規登録</a>
         <a href="#" class="login">ログイン</a>
       </div>
@@ -36,7 +36,7 @@
   <div class="lesson-wrapper">
     <div class="container">
       <div class="heading">
-        <h2>Learn Where to Get Started!</h2>
+        <h2 id="aboutme">about me</h2>
       </div>
       <div class="lessons">
         <div class="lesson">
