--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
       <span class="fa fa-bars menu-icon"></span>
       <div class="header-right">
         <a href="#aboutme"><img class="about-logo" src="https://github.com/calm0123/calm.portfolio/blob/master/about%20me.png?raw=true"></a>
-        <a href="#">新規登録</a>
-        <a href="#" class="login">ログイン</a>
+        <a href="#portfolio"><img class="portfolio-logo" src="https://github.com/calm0123/calm.portfolio/blob/master/Portfolio.png?raw=true"></a>
+        <a href="#contactus"><img class="contentus-logo" src="https://github.com/calm0123/calm.portfolio/blob/master/Contact%20Us.png?raw=true"></a>
       </div>
     </div>
   </header>
