--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
     <div class="container">
       <div class="heading">
         <h2 id="aboutme">about me</h2>
+        <h2 id="portfolio">about me</h2>
+        <h2 id="contactus">about me</h2>
       </div>
       <div class="lessons">
         <div class="lesson">
