--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <header>
     <div class="container">
       <div class="header-left">
-        <img class="logo" src="https://github.com/calm0123/calm.portfolio/blob/master/calm.png?raw=true">
+        <a href="#header-left"><img class="logo" src="https://github.com/calm0123/calm.portfolio/blob/master/calm.png?raw=true"></a>
       </div>
       <span class="fa fa-bars menu-icon"></span>
       <div class="header-right">
@@ -37,8 +37,8 @@
     <div class="container">
       <div class="heading">
         <h2 id="aboutme">about me</h2>
-        <h2 id="portfolio">about me</h2>
-        <h2 id="contactus">about me</h2>
+        <h2 id="portfolio">portfolio</h2>
+        <h2 id="contactus">contact us</h2>
       </div>
       <div class="lessons">
         <div class="lesson">
