--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
   <header>
     <div class="container">
-      <div class="header-left" id="headerleft">
-        <a href="#headerleft"><img class="logo" src="https://github.com/calm0123/calm.portfolio/blob/master/calm.png?raw=true"></a>
+      <div class="header-left" id="header">
+        <a href="#header"><img class="logo" src="https://github.com/calm0123/calm.portfolio/blob/master/calm.png?raw=true"></a>
       </div>
       <span class="fa fa-bars menu-icon"></span>
       <div class="header-right">
