--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <link rel="stylesheet" type="text/css" href="stylesheet.css">
 </head>
 <body>
+
+<!--ヘッダー--!>
   <header>
     <div class="container">
       <div class="header-left" id="header">
@@ -21,18 +23,24 @@
       </div>
     </div>
   </header>
+
+
+<!--トップページ--!>
+
   <div class="top-wrapper">
     <div class="container">
-      <h1>LEARN TO CODE.<br>LEARN TO BE CREATIVE.</h1>
-      <p>Progateはオンラインプログラミング学習サービスです。<br>初心者にもやさしいスライドとレッスンで、ウェブサービスを作りながらプログラミングを学んでいきましょう。</p>
+      <a href="#"><img class="logo" src="https://github.com/calm0123/calm.portfolio/blob/master/calm.png?raw=true"></a>
+      <p>誰もが生きやすく、心穏やかな日々を過ごせますように</p>
       <div class="btn-wrapper">
-        <a href="#" class="btn signup">新規登録はこちら</a>
-        <p>or</p>
-        <a href="#" class="btn facebook"><span class="fa fa-facebook"></span>Facebookで登録</a>
-        <a href="#" class="btn twitter"><span class="fa fa-twitter"></span>Twitterで登録</a>
+        <a href="#contactus" class="btn signup">問い合わせはこちら</a>
       </div>
     </div>
   </div>
+
+
+
+<!--about me--!>
+
   <div class="lesson-wrapper">
     <div class="container">
       <div class="heading">
