--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Progate</title>
+  <title>Calm</title>
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="stylesheet.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css">
 </head>
 <body>
 
@@ -29,8 +30,8 @@
 
   <div class="top-wrapper">
     <div class="container">
-      <a href="#"><img class="logo" src="https://github.com/calm0123/calm.portfolio/blob/master/calm.png?raw=true"></a>
-      <p>誰もが生きやすく、心穏やかな日々を過ごせますように</p>
+        <h1>Calm</h1>
+        <p>誰もが生きやすく、心穏やかな日々を過ごせますように</p>
       <div class="btn-wrapper">
         <a href="#contactus" class="btn signup">問い合わせはこちら</a>
       </div>
