--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <header>
     <div class="container">
       <div class="header-left" id="header">
-        <a href="#header"><img class="logo" src="https://github.com/calm0123/calm.portfolio/blob/master/calm.png?raw=true"></a>
+        <a href="#calm"><img class="logo" src="https://github.com/calm0123/calm.portfolio/blob/master/calm.png?raw=true"></a>
       </div>
       <span class="fa fa-bars menu-icon"></span>
       <div class="header-right">
@@ -30,7 +30,7 @@
 
   <div class="top-wrapper">
     <div class="container">
-        <h1>Calm</h1>
+        <h1 id="calm">Calm</h1>
         <p>誰もが生きやすく、心穏やかな日々を過ごせますように</p>
       <div class="btn-wrapper">
         <a href="#contactus" class="btn signup">問い合わせはこちら</a>
