--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         <p>誰もが生きやすく、心穏やかな日々を過ごせますように</p>
       <div class="btn-wrapper">
         <a href="#contactus" class="btn signup">問い合わせはこちら</a>
+        <a href ="aboutme"><i class="far fa-arrow-alt-circle-down"></i></a>
       </div>
     </div>
   </div>
