--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
         <h1 id="calm">Calm</h1>
         <p>誰もが生きやすく、心穏やかな日々を過ごせますように</p>
       <div class="btn-wrapper">
-        <a href="#contactus" class="btn signup">問い合わせはこちら</a>
-        <a href ="aboutme"><i class="far fa-arrow-alt-circle-down"></i></a>
+        <a href="#contactus" class="btn signup"><i class="far fa-envelope"></i>問い合わせはこちら</a>
+        <a href ="#aboutme"><i class="far fa-arrow-alt-circle-down"></i></a>
       </div>
     </div>
   </div>
