--- a/index.html
+++ b/index.html
@@ -108,12 +108,9 @@
                         </form>
      <span class="btn message">さっそく開発する</span>
 
-
+<!--フッター--!>
   <footer>
-    <div class="container">
-      <img src="https://prog-8.com/images/html/advanced/footer_logo.png">
-      <p>Learn to Code, Learn to be Creative.</p>
-    </div>
+      <p>© 2020 Calm,Dseigned by Calm</p>
   </footer>
 </body>
 </html>
