--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
 <!--ヘッダー--!>
   <header>
     <div class="container">
-      <div class="header-left" id="header">
-        <a href="#calm"><img class="logo" src="https://github.com/calm0123/calm.portfolio/blob/master/calm.png?raw=true"></a>
+      <div class="header-left">
+        <a href="#calm"><img class="logo" src="https://github.com/calm0123/calm.portfolio/blob/master/calm%20(1).png?raw=true"></a>
       </div>
 
       <div class="header-right">
-        <a href="#aboutme"><img class="about-logo" src="https://github.com/calm0123/calm.portfolio/blob/master/about%20me.png?raw=true"></a>
-        <a href="#portfolio"><img class="portfolio-logo" src="https://github.com/calm0123/calm.portfolio/blob/master/Portfolio.png?raw=true"></a>
-        <a href="#contactus"><img class="contentus-logo" src="https://github.com/calm0123/calm.portfolio/blob/master/Contact%20Us.png?raw=true"></a>
+        <a href="#aboutme"><img class="about logo" src="https://github.com/calm0123/calm.portfolio/blob/master/about%20me%20(1).png?raw=true"></a>
+        <a href="#portfolio"><img class="portfolio logo" src="https://github.com/calm0123/calm.portfolio/blob/master/portfolio%20(1).png?raw=true"></a>
+        <a href="#contactus"><img class="contentus logo" src="https://github.com/calm0123/calm.portfolio/blob/master/contact.png?raw=true"></a>
       </div>
     </div>
   </header>
