--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <h1 id="calm">Calm</h1>
         <p>誰もが生きやすく、心穏やかな日々を過ごせますように</p>
       <div class="btn-wrapper">
-        <a href="#contactus" class="btn signup"><i class="far fa-envelope"></i>問い合わせはこちら</a>
+        <button class="Button-style" href="#contactus"><i class="far fa-envelope"></i>問い合わせはこちら</button>
         <a href ="#aboutme"><i class="far fa-arrow-alt-circle-down"></i></a>
       </div>
     </div>
