--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <h1 id="calm">Calm</h1>
         <p>誰もが生きやすく、心穏やかな日々を過ごせますように</p>
       <div class="btn-wrapper">
-        <button class="Button-style" onclick="#contactus"><i class="far fa-envelope"></i>問い合わせはこちら</button>
+        <button class="Button-style" onclick="location.hash='#contactus';"><i class="far fa-envelope"></i>問い合わせはこちら</button>
         <a href ="#aboutme"><i class="far fa-arrow-alt-circle-down"></i></a>
       </div>
     </div>
