--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <p>誰もが生きやすく、心穏やかな日々を過ごせますように</p>
       <div class="btn-wrapper">
         <a href ="#contactus" class="Button-style"><i class="far fa-envelope"></i>問い合わせはこちら</a>
-        <a href ="#aboutme"><i class="far fa-arrow-alt-circle-down"></i></a>
+        <a href ="#aboutme"　class="down"><i class="far fa-arrow-alt-circle-down"></i></a>
       </div>
     </div>
   </div>
