--- a/index.html
+++ b/index.html
@@ -67,6 +67,10 @@
           <li style="animation-delay: 0s;" class="is-animated">
                   <div class="inn">
                      <h3>instagram</h>
+
+<!-- instagram -->
+<script src="https://snapwidget.com/js/snapwidget.js"></script>
+<iframe src="https://snapwidget.com/embed/857148" class="snapwidget-widget" allowtransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden;  width:100%; "></iframe>
                        <a href="https://www.instagram.com/c_p.hoto/?hl=ja"><img src="fab fa-instagram"></a>
                      <h3>minne</h>
                        <a href="https://minne.com/@chiiii123"><img src="fab fa-instagram"></a>
