--- a/index.html
+++ b/index.html
@@ -115,6 +115,11 @@
                             </div>
                         </form>
 
+  <div class="pagetop">
+    <a href="#page">▲ ページトップへ </a>
+  </div>
+
+
 <!--フッター--!>
   <footer>
       <p>© 2020 Calm,Dseigned by Calm</p>
