--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                         </form>
 
   <div class="pagetop">
-    <a href="#page">▲ ページトップへ </a>
+    <a href="#calm">▲ ページトップへ </a>
   </div>
 
 
