--- a/index.html
+++ b/index.html
@@ -67,17 +67,21 @@
         <ul class="list anm-list is-animated">
           <li style="animation-delay: 0s;" class="is-animated">
                   <div class="inn">
-                     <h3>instagram</h>
+                     <h3><img src="fab fa-instagram">instagram</h>
 
 <!-- instagram -->
 <script src="https://snapwidget.com/js/snapwidget.js"></script>
 <iframe src="https://snapwidget.com/embed/857148" class="snapwidget-widget" allowtransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden;  width:100%; "></iframe>
-                       <a href="https://www.instagram.com/c_p.hoto/?hl=ja"><img src="fab fa-instagram"></a>
-                     <h3>minne</h>
-                       <a href="https://minne.com/@chiiii123"><img src="fab fa-instagram"></a>
-                  </div>        
-          </li>
+
+<!-- minne --!>
+            <h3><img src="fab fa-instagram">minne</h>  
+      <a href="https://minne.com/@chiiii123">minne</a>
+                  </div>         
+            </li>
         </ul>
+
+
+        
   <!--コンタクト--!>      
         <h2 id="contactus">contact us</h2>
       </div>
