--- a/index.html
+++ b/index.html
@@ -83,38 +83,38 @@
 
         
   <!--コンタクト--!>      
-        <h2 id="contactus">contact us</h2>
-      </div>
+        <h2 id="contactus">contact</h2>
+
 <form method="post" action="php/contact.php" name="contact-form" id="working_form" class="AVAST_PAM_nonloginform">
-                            <div class="row">
+                            <div class="row" >
                                 <div class="col-lg-6">
                                     <div class="form-group mt-2">
-                                        <input name="name" id="name" type="text" class="form-control" placeholder="Your name...">
+                                        <input name="name" id="name" type="text" class="form-control" placeholder="お名前">
                                     </div>
                                 </div>
                                 <div class="col-lg-6">
                                     <div class="form-group mt-2">
-                                        <input name="email" id="email" type="email" class="form-control" placeholder="Your email...">
+                                        <input name="email" id="email" type="email" class="form-control" placeholder="返信先アドレス">
                                     </div>
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="col-lg-12">
                                     <div class="form-group mt-2">
-                                        <input type="text" class="form-control" id="subject" placeholder="Your Subject..">
+                                        <input type="text" class="form-control" id="subject" placeholder="件名">
                                     </div>
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="col-lg-12">
                                     <div class="form-group mt-2">
-                                        <textarea name="comments" id="comments" rows="4" class="form-control" placeholder="Your message..."></textarea>
+                                        <textarea name="comments" id="comments" rows="4" class="form-control" placeholder="本文"></textarea>
                                     </div>
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="col-lg-12 text-right">
-                                    <input type="submit" id="submit" name="send" class="submitBtn btn btn-custom text-uppercase" value="Submit">
+                                    <input type="submit" id="submit" name="send" class="submitBtn btn btn-custom text-uppercase" value="送信">
                                     <div id="simple-msg"></div>
                                 </div>
                             </div>
