--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <!--ヘッダー--!>
   <header>
-    <div class="container">
+    <div class="top-header">
       <div class="header-left">
         <a href="#calm"><img class="logo" src="https://github.com/calm0123/calm.portfolio/blob/master/calm%20(1).png?raw=true"></a>
       </div>
@@ -67,14 +67,14 @@
         <ul class="list anm-list is-animated">
           <li style="animation-delay: 0s;" class="is-animated">
                   <div class="inn">
-                     <h3><img src="fab fa-instagram">instagram</h>
+                     <h3>instagram</h>
 
 <!-- instagram -->
 <script src="https://snapwidget.com/js/snapwidget.js"></script>
 <iframe src="https://snapwidget.com/embed/857148" class="snapwidget-widget" allowtransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden;  width:100%; "></iframe>
 
 <!-- minne --!>
-            <h3><img src="fab fa-instagram">minne</h>  
+            <h3>minne</h>  
       <a href="https://minne.com/@chiiii123">minne</a>
                   </div>         
             </li>
