--- a/index.html
+++ b/index.html
@@ -43,15 +43,15 @@
 
 
 <!--about me--!>
-
-  <div class="lesson-wrapper">
-    <div class="container">
-      <div class="heading">
+  
+    <div class="container-about">
+    
         <h2 id="aboutme">about me</h2>
 
-        <div class="about-image">
-          <div class="frame"><img src="https://github.com/calm0123/calm.portfolio/blob/master/image0.jpeg?raw=true"></div>
-        </div>
+          <div class="about-image">
+            <div class="frame"><img src="https://github.com/calm0123/calm.portfolio/blob/master/image0.jpeg?raw=true"></div>
+          </div>
+          
         <div class="about-p"><p>はじめまして。ご覧頂きありがとうございます。児童発達支援センターにて発達障害、自閉症、ADHD、運動発達遅滞、
 医療的ケアを必要としている子ども達、様々な子ども達と関わりを持ってきました。
 現在は、某ベビーシッターサービスで東京都、千葉県を中心にベビーシッターを行っています。
