--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
     <div class="container"><!--中央寄せ、下10px余白、横幅画面いっぱい--!>
 
       <div class="header-left">
-      <a href="#top"><img class="calm" src="https://github.com/calm0123/calm.portfolio/blob/master/calm%20(1).png?raw=true"></a>
+      <a href="#top"><img class="img-calm" src="https://github.com/calm0123/calm.portfolio/blob/master/calm%20(1).png?raw=true"></a>
       </div>
 
       
       <div class="header-right">
-        <a href="#about">レッスン</a>
-        <a href="#portfolio">新規登録</a>
-        <a href="#contact" class="login">ログイン</a>
+        <a href="#about"><img src="https://github.com/calm0123/calm.portfolio/blob/master/about%20me%20(1).png?raw=true"></a>
+        <a href="#portfolio"><img src="https://github.com/calm0123/calm.portfolio/blob/master/portfolio%20(1).png?raw=true"></a>
+        <a href="#contact"><img src="https://github.com/calm0123/calm.portfolio/blob/master/contact.png?raw=true"></a>
       </div>
       
     </div>
