--- a/index.html
+++ b/index.html
@@ -37,11 +37,13 @@
 
 
 
-  
-  <div class="top-wrapper">
-    <div class="container">
-      <h1>LEARN TO CODE.<br>LEARN TO BE CREATIVE.</h1>
-      <p>Progateはオンラインプログラミング学習サービスです。<br>初心者にもやさしいスライドとレッスンで、ウェブサービスを作りながらプログラミングを学んでいきましょう。</p>
+  <div class="top-wrapper"> <!--トップ画面外枠--!>  
+
+    <div class="container"> <!--中央寄せ、下10px余白、横幅画面いっぱい--!>
+      <h1>Calm</h1>
+      <p>誰もが生きやすく、心穏やかな日々を過ごせますように</p>
+
+      
       <div class="btn-wrapper">
         <a href="#" class="btn signup">新規登録はこちら</a>
         <p>or</p>
