--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
   <div class="top-wrapper"> <!--トップ画面外枠--!>  
 
-    <div class="container"> <!--中央寄せ、下10px余白、横幅画面いっぱい--!>
+    <div class="container-top"> <!--中央寄せ、下10px余白、横幅画面いっぱい--!>
       <h1>Calm</h1>
       <p>誰もが生きやすく、心穏やかな日々を過ごせますように</p>
 
