--- a/index.html
+++ b/index.html
@@ -49,12 +49,27 @@
 
 
 
-
   <div class="lesson-wrapper">
     <div class="container">
       <div class="heading">
-        <h2>Learn Where to Get Started!</h2>
+        <a name="aboutme"></a><!--aboutが押されたらここに来る--!>
+        <h2>about</h2>
+
+        <a name="portfolio"></a><!--portfolioが押されたらここに来る--!>
+        <h2>portfolio</h2>
+        <h3>---趣味一覧---</h>
+
+        <a name="contact"></a><!--contactが押されたらここに来る--!>
+        <h2>contact</h2>
+
+
       </div>
+
+
+
+
+
+      
       <div class="lessons">
         <div class="lesson">
           <div class="lesson-icon">
