--- a/index.html
+++ b/index.html
@@ -59,6 +59,26 @@
         <h2>portfolio</h2>
         <h3>---趣味一覧---</h>
 
+
+        <ul class="list anm-list is-animated">
+          <li style="animation-delay: 0s;" class="is-animated">
+                  <div class="inn">
+                     <h3>instagram</h>
+
+<!-- instagram -->
+<script src="https://snapwidget.com/js/snapwidget.js"></script>
+<iframe src="https://snapwidget.com/embed/857148" class="snapwidget-widget" allowtransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden;  width:100%; "></iframe>
+
+<!-- minne --!>
+            <h3>minne</h>  
+      <a href="https://minne.com/@chiiii123">minne</a>
+                  </div>         
+            </li>
+        </ul>
+
+
+
+
         <a name="contact"></a><!--contactが押されたらここに来る--!>
         <h2>contact</h2>
 
