--- a/index.html
+++ b/index.html
@@ -52,8 +52,17 @@
   <div class="lesson-wrapper">
     <div class="container">
       <div class="heading">
-        <a name="aboutme"></a><!--aboutが押されたらここに来る--!>
+
+        <a name="about"></a><!--aboutが押されたらここに来る--!>
         <h2>about</h2>
+
+          <div class="tape-box">
+            <div class="tape"></div>
+            <p>はじめまして。ご覧頂きありがとうございます。<br>
+            児童発達支援センターにて発達障害、自閉症、ADHD、運動発達遅滞、<br>
+            医療的ケアを必要としている子ども達、様々な子ども達と関わりを持ってきました。<br>
+            現在は、某ベビーシッターサービスで東京都、千葉県を中心にベビーシッターを行っています。</p>
+          </div>  
 
         <a name="portfolio"></a><!--portfolioが押されたらここに来る--!>
         <h2>portfolio</h2>
