--- a/index.html
+++ b/index.html
@@ -56,8 +56,7 @@
         <a name="about"></a><!--aboutが押されたらここに来る--!>
         <h2>about</h2>
 
-          <div class="tape-box">
-            <div class="tape"></div>
+          <div class="loose-leaf">
             <p>はじめまして。ご覧頂きありがとうございます。<br>
             児童発達支援センターにて発達障害、自閉症、ADHD、運動発達遅滞、<br>
             医療的ケアを必要としている子ども達、様々な子ども達と関わりを持ってきました。<br>
