--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@
         <a name="about"></a><!--aboutが押されたらここに来る--!>
         <h2>about</h2>
 
+        <a href=""><img src="https://github.com/calm0123/calm.portfolio/blob/master/image0.jpeg?raw=true
+"></a>
+
           <div class="loose-leaf">
             <p>はじめまして。ご覧頂きありがとうございます。<br>
             児童発達支援センターにて発達障害、自閉症、ADHD、運動発達遅滞、<br>
