--- a/index.html
+++ b/index.html
@@ -56,8 +56,9 @@
         <a name="about"></a><!--aboutが押されたらここに来る--!>
         <h2>about</h2>
 
-        <a href=""><img src="https://github.com/calm0123/calm.portfolio/blob/master/image0.jpeg?raw=true
-"></a>
+
+        <div class="about-main">
+          <a href=""><img src="https://github.com/calm0123/calm.portfolio/blob/master/image0.jpeg?raw=true"></a>
 
           <div class="loose-leaf">
             <p>はじめまして。ご覧頂きありがとうございます。<br>
@@ -65,6 +66,7 @@
             医療的ケアを必要としている子ども達、様々な子ども達と関わりを持ってきました。<br>
             現在は、某ベビーシッターサービスで東京都、千葉県を中心にベビーシッターを行っています。</p>
           </div>  
+        </div>
 
         <a name="portfolio"></a><!--portfolioが押されたらここに来る--!>
         <h2>portfolio</h2>
