--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 
       
       <div class="header-right">
-        <a href="#about"><img src="https://github.com/calm0123/calm.portfolio/blob/master/about%20me%20(1).png?raw=true"></a>
-        <a href="#portfolio"><img src="https://github.com/calm0123/calm.portfolio/blob/master/portfolio%20(1).png?raw=true"></a>
-        <a href="#contact"><img src="https://github.com/calm0123/calm.portfolio/blob/master/contact.png?raw=true"></a>
+        <a href="#about"><img class="rightimg" src="https://github.com/calm0123/calm.portfolio/blob/master/about%20me%20(1).png?raw=true"></a>
+        <a href="#portfolio"><img class="rightimg" src="https://github.com/calm0123/calm.portfolio/blob/master/portfolio%20(1).png?raw=true"></a>
+        <a href="#contact"><img class="rightimg" src="https://github.com/calm0123/calm.portfolio/blob/master/contact.png?raw=true"></a>
       </div>
       
     </div>
