--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
 
         <div class="about-main">
-          <a href=""><img class="imgabout" src="https://github.com/calm0123/calm.portfolio/blob/master/image0.jpeg?raw=true"></a>
+          <img class="imgabout" src="https://github.com/calm0123/calm.portfolio/blob/master/image0.jpeg?raw=true">
 
           <div class="loose-leaf">
             <p>はじめまして。ご覧頂きありがとうございます。<br>
