--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
                   <div class="inn">
                      <h3>instagram</h>
 
+        <div class="container">
 <!-- instagram -->
 <script src="https://snapwidget.com/js/snapwidget.js"></script>
 <iframe src="https://snapwidget.com/embed/857148" class="snapwidget-widget" allowtransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden;  width:100%; "></iframe>
@@ -125,3 +126,5 @@
   </footer>
 </body>
 </html>
+
+</div>
