--- a/index.html
+++ b/index.html
@@ -96,24 +96,13 @@
 
         <a name="contact"></a><!--contactが押されたらここに来る--!>
         <h2>contact</h2>
-
-
+          <p>お問い合わせについては、<a herf="https://www.instagram.com/c_p.hoto/">instagramのDM</a>からお願いします。
       </div>
   
 
 
 
 
-
-  <div class="message-wrapper">
-    <div class="container">
-      <div class="heading">
-        <h2>さぁ、あなたもProgateでプログラミングを学んでみませんか?</h2>
-        <h3>Let's learn to code, learn to be creative!</h3>
-      </div>
-      <span class="btn message">さっそく開発する</span>
-    </div>
-  </div>
   <footer>
     <div class="container">
       <img src="https://prog-8.com/images/html/advanced/footer_logo.png">
