--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
         <a name="contact"></a><!--contactが押されたらここに来る--!>
         <h2>contact</h2>
-          <p>お問い合わせについては、<a herf="https://www.instagram.com/c_p.hoto/">instagramのDM</a>からお願いします。
+          <p>お問い合わせについては、<a href="https://www.instagram.com/c_p.hoto/">instagramのDM</a>からお願いします。
       </div>
   
 
@@ -105,7 +105,6 @@
 
   <footer>
     <div class="container">
-      <img src="https://prog-8.com/images/html/advanced/footer_logo.png">
       <p class="copyright">&copy; 2020 Calm </p>
     </div>
   </footer>
