--- a/index.html
+++ b/index.html
@@ -49,9 +49,8 @@
 
 
 
-  <div class="lesson-wrapper">
-    <div class="container">
-      <div class="heading">
+
+    <div class="container-top">
 
         <a name="about"></a><!--aboutが押されたらここに来る--!>
         <h2>about</h2>
@@ -93,6 +92,7 @@
 
 
 
+     <div class="container-top">
 
         <a name="contact"></a><!--contactが押されたらここに来る--!>
         <h2>contact</h2>
@@ -104,7 +104,8 @@
 
 
   <footer>
-    <div class="container">
+
+    <div class="container-top">
       <p class="copyright">&copy; 2020 Calm </p>
     </div>
   </footer>
