--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
         <a name="contact"></a><!--contactが押されたらここに来る--!>
         <h2>contact</h2>
 
-          <a href="https://www.instagram.com/c_p.hoto/" class="btn-social-icon-instagram">
-            <span class="btn-social-icon-instagram__square"><i class="fa fa-instagram"></i></span> Follow Me
+          <a href="https://www.instagram.com/c_p.hoto/" class="btn-social-long-insta">
+             <i class="fab fa-instagram"></i> <span>Follow Me</span>
           </a>
 
           <p>お問い合わせについては、<a href="https://www.instagram.com/c_p.hoto/">instagramのDM</a>からお願いします。
