--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
              <i class="fab fa-instagram"></i> <span>Follow Me</span>
           </a>
 
-          <p>お問い合わせについては、<a href="https://www.instagram.com/c_p.hoto/">instagramのDM</a>からお願いします。
+          <p>お問い合わせについてはinstagramのDMよりお願いします。</p>
       </div>
   
 
