--- a/index.html
+++ b/index.html
@@ -57,14 +57,22 @@
 
 
         <div class="about-main">
+           
+          <table>
+             <tr>
+              <td>
+                <img　class="imgabout" src="https://github.com/calm0123/calm.portfolio/blob/master/image0.jpeg?raw=true">
+              </td>
 
-          <p>
-              <img class="imgabout" src="https://github.com/calm0123/calm.portfolio/blob/master/image0.jpeg?raw=true"　align="middle">
+              <td>
               はじめまして。ご覧頂きありがとうございます。<br>
             児童発達支援センターにて発達障害、自閉症、ADHD、運動発達遅滞、<br>
             医療的ケアを必要としている子ども達、様々な子ども達と関わりを持ってきました。<br>
             現在は、某ベビーシッターサービスで東京都、千葉県を中心にベビーシッターを行っています。</p>
-          </p>
+              </td>
+            </tr>
+          </table>
+
 
 
           <div class="loose-leaf">
