--- a/index.html
+++ b/index.html
@@ -56,14 +56,6 @@
         <h2>about</h2>
     </div>
 
-        <div class="about-main">
-           
-          <table>
-             <tr>
-              <td>
-                <img　class="imgabout" src="">
-              </td>
-
 
       <div class="box">
               <div class="box-img">
@@ -75,6 +67,12 @@
            児童発達支援センターにて発達障害、自閉症、ADHD、運動発達遅滞、<br>
            医療的ケアを必要としている子ども達、様々な子ども達と関わりを持ってきました。<br>
            現在は、某ベビーシッターサービスで東京都、千葉県を中心にベビーシッターを行っています。
+          
+              <a href="https://ameblo.jp/calm-2020/" class="bnt-massage">
+                MORE
+                <span>amebaに移動</span>
+              </a>
+
           </div>
       </div>
 
