--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <h2>about</h2>
     </div>
 
-
+    <div class="container-top">
       <div class="box">
               <div class="box-img">
                 <img src="https://github.com/calm0123/calm.portfolio/blob/master/image0.jpeg?raw=true" alt=""　class="aboutimg">
@@ -75,6 +75,7 @@
 
           </div>
       </div>
+    </div>
 
         <a name="portfolio"></a><!--portfolioが押されたらここに来る--!>
         <h2>portfolio</h2>
